Closed Bug 314091 Opened 19 years ago Closed 19 years ago

mozAutoDocUpdate(doc, UPDATE_CONTENT_STATE, PR_TRUE) doesn't do what it should

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: Biesinger, Assigned: Biesinger)

References

()

Details

Attachments

(1 file, 2 obsolete files)

Attached patch patch (obsolete) — Splinter Review
Attachment #201043 - Flags: superreview?(bzbarsky)
Attachment #201043 - Flags: review?(bzbarsky)
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.9alpha
Comment on attachment 201043 [details] [diff] [review]
patch

r+sr=bzbarsky.  We have more of these in the tree... (
Attachment #201043 - Flags: superreview?(bzbarsky)
Attachment #201043 - Flags: superreview+
Attachment #201043 - Flags: review?(bzbarsky)
Attachment #201043 - Flags: review+
OK, I'll use this bug for the rest of them too
Attached patch complete patch (obsolete) — Splinter Review
Attachment #201043 - Attachment is obsolete: true
Attachment #201153 - Flags: superreview?(bzbarsky)
Attachment #201153 - Flags: review?(bzbarsky)
Attachment #201153 - Flags: superreview?(bzbarsky)
Attachment #201153 - Flags: superreview+
Attachment #201153 - Flags: review?(bzbarsky)
Attachment #201153 - Flags: review+
Attached patch merged to trunkSplinter Review
Attachment #201153 - Attachment is obsolete: true
fixed on trunk
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Can we make this not compile?  (It would be trivial given const constructors, which I wish C++ had.)
maybe we could make a macro that declares this variable, e.g.:

  AUTO_DOC_UPDATE(doc, UPDATE_CONTENT_STATE, aNotify);

(similar to http://lxr.mozilla.org/seamonkey/source/netwerk/base/src/nsBaseChannel.cpp#84)
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: