bug 314091 Fix users of mozAutoDocUpdate to actually declare a local variable, so that the destructor doesn't get called immediately r+sr=bz