content/html/content/src/nsHTMLOptGroupElement.cpp
@@ -192,7 +192,7 @@ nsHTMLOptGroupElement::AfterSetAttr(PRInt32 aNameSpaceID, nsIAtom* aName,
       aName == nsHTMLAtoms::disabled) {
     nsIDocument* document = GetCurrentDoc();
     if (document) {
-      mozAutoDocUpdate(document, UPDATE_CONTENT_STATE, PR_TRUE);
+      mozAutoDocUpdate upd(document, UPDATE_CONTENT_STATE, PR_TRUE);
       document->ContentStatesChanged(this, nsnull, NS_EVENT_STATE_DISABLED |
                                      NS_EVENT_STATE_ENABLED);
     }
